--- a/javascript/javascript-em-pag-html/index.html
+++ b/javascript/javascript-em-pag-html/index.html
@@ -5,10 +5,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Incluindo Javascript em uma Página HTML</title>
-
-  <script src="index.js"></script>
 </head>
 <body>
   <h1>Incluindo Javascript em uma Página HTML</h1>
+
+  <script src="index.js"></script>
+  <script src="arquivo.js"></script>
 </body>
 </html>
