--- a/HTML5/listas/desafio01.html
+++ b/HTML5/listas/desafio01.html
@@ -13,7 +13,9 @@
     </h1>
     <ul>
         <li>
-            <strong>Indiferença</strong>
+            <strong>
+                Indiferença
+            </strong>
             <ol>
                 <li>Davi</li>
                 <li>Fé</li>
@@ -60,7 +62,7 @@
 
     <ul>
         <li>
-            <strong>Depois da Guerra(2008)</strong>
+            Depois da Guerra(2008)
             <ol>
                 <li>D.A.G</li>
                 <li>Meus Própios Meios</li>
